[gd_scene load_steps=6 format=4 uid="uid://bqi3p5urnr5qr"]

[ext_resource type="TileSet" uid="uid://dl24hwgvgrqf0" path="res://assets/tilemap/overworld_tilemap/overworld_tilemap.tres" id="1_fsom3"]
[ext_resource type="Script" uid="uid://cbv1g3cytja28" path="res://scenes/main_menu/main_menu.gd" id="1_ob46e"]
[ext_resource type="PackedScene" uid="uid://c2ukvs58nra0w" path="res://assets/ui/options_menu/options_menu.tscn" id="3_uqeha"]
[ext_resource type="AudioStream" uid="uid://dg8o7gbaem1wb" path="res://scenes/main_menu/a_path_which_leads_to_somewhere.ogg" id="4_uqeha"]
[ext_resource type="FontFile" uid="uid://cd017084llnwn" path="res://Daydream.ttf" id="5_wem23"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ob46e")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAACAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAABAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAABAAAAAAAAABAAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAABAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAACAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAABAAAAAAABAAsAAAABAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAACAAAAAAABAA8AAAACAAAAAAABABAAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAACAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAABAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAABAAAAAAACAAwAAAACAAAAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAACABAAAAABAAAAAAADAAAAAAACAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAACAAAAAAADAAcAAAACAAAAAAADAAgAAAABAAAAAAADAAkAAAACAAAAAAADAAoAAAABAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAAAAAAAAAAADABAAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAACAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAABAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAABAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAACAAAAAAAEAAsAAAABAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAACAAAAAAAEAA4AAAACAAAAAAAEAA8AAAAAAAAAAAAEABAAAAABAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAACAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAACAAAAAAAFAAUAAAABAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAABAAAAAAAFAAwAAAABAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAACAAAAAAAFAA8AAAAAAAAAAAAFABAAAAAAAAAAAAAGAAAAAAACAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAABAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAACAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAACAAAAAAAGAA4AAAABAAAAAAAGAA8AAAAAAAAAAAAGABAAAAAAAAAAAAAHAAAAAAABAAAAAAAHAAEAAAACAAAAAAAHAAIAAAABAAAAAAAHAAMAAAACAAAAAAAHAAQAAAABAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAACAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAABAAIAAAAHAAoAAAABAAIAAAAHAAsAAAAAAAIAAAAHAAwAAAAAAAIAAAAHAA0AAAAAAAIAAAAHAA4AAAAAAAIAAAAHAA8AAAAAAAIAAAAHABAAAAAAAAIAAAAIAAAAAAAAAAAAAAAIAAEAAAACAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAABAAAAAAAIAAYAAAABAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAABAAIAAAAIAAoAAAABAAIAAAAIAAsAAAACAAIAAAAIAAwAAAACAAIAAAAIAA0AAAACAAIAAAAIAA4AAAACAAIAAAAIAA8AAAACAAIAAAAIABAAAAACAAIAAAAJAAAAAAACAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAABAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAABAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAACAAAAAAAJAAkAAAACAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAABAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAABAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAABAAAAAAAJABAAAAABAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAACAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAABAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAACAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAABAAAAAAAKABAAAAAAAAAAAAALAAAAAAABAAAAAAALAAEAAAABAAAAAAALAAIAAAACAAAAAAALAAMAAAAAAAAAAAALAAQAAAABAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAABAAAAAAALAAkAAAAAAAAAAAALAAoAAAACAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAACAAAAAAALAA4AAAAAAAAAAAALAA8AAAAAAAAAAAALABAAAAACAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAABAAAAAAAMAAMAAAACAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAABAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAABAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA4AAAABAAAAAAAMAA8AAAABAAAAAAAMABAAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAABAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAABAAAAAAANAAUAAAACAAAAAAANAAYAAAABAAAAAAANAAcAAAAAAAAAAAANAAgAAAABAAAAAAANAAkAAAABAAAAAAANAAoAAAABAAAAAAANAAsAAAAAAAAAAAANAAwAAAACAAAAAAANAA0AAAACAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAAOAAAAAAABAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAABAAAAAAAOAAQAAAABAAAAAAAOAAUAAAACAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAABAAAAAAAOAAkAAAABAAAAAAAOAAoAAAABAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA4AAAACAAAAAAAOAA8AAAABAAAAAAAOABAAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAACAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAABAAAAAAAQAAAAAAABAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAACAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAABAAAAAAARAAIAAAABAAAAAAARAAMAAAAAAAAAAAARAAQAAAACAAAAAAARAAUAAAABAAAAAAARAAYAAAABAAAAAAARAAcAAAAAAAAAAAARAAgAAAACAAAAAAARAAkAAAAAAAAAAAARAAoAAAABAAAAAAARAAsAAAACAAAAAAARAAwAAAABAAAAAAARAA0AAAAAAAAAAAARAA4AAAABAAAAAAARAA8AAAAAAAAAAAARABAAAAACAAAAAAASAAAAAAABAAAAAAASAAEAAAACAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAABAAAAAAASAAYAAAAAAAAAAAASAAcAAAABAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAACAAAAAAASAAwAAAABAAAAAAASAA0AAAAAAAAAAAASAA4AAAAAAAAAAAASAA8AAAABAAAAAAASABAAAAACAAAAAAATAAAAAAAAAAAAAAATAAEAAAABAAAAAAATAAIAAAABAAAAAAATAAMAAAABAAAAAAATAAQAAAACAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAACAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAACAAAAAAATAA0AAAACAAAAAAATAA4AAAACAAAAAAATAA8AAAAAAAAAAAATABAAAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAABAAAAAAAUAAIAAAACAAAAAAAUAAMAAAACAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAACAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAUAA0AAAAAAAAAAAAUAA4AAAAAAAAAAAAUAA8AAAAAAAAAAAAUABAAAAAAAAAAAAAVAAAAAAACAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAABAAAAAAAVAAwAAAACAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAACAAAAAAAVAA8AAAABAAAAAAAVABAAAAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAABAAAAAAAWAAIAAAABAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAACAAAAAAAWAAcAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAAwAAAABAAAAAAAWAA0AAAAAAAAAAAAWAA4AAAABAAAAAAAWAA8AAAAAAAAAAAAWABAAAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAABAAAAAAAXAAoAAAACAAAAAAAXAAsAAAACAAAAAAAXAAwAAAABAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAACAAAAAAAXAA8AAAAAAAAAAAAXABAAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAABAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA4AAAAAAAAAAAAYAA8AAAAAAAAAAAAYABAAAAAAAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAACAAAAAAAZAAUAAAAAAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAACAAAAAAAZAAgAAAACAAAAAAAZAAkAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAA0AAAACAAAAAAAZAA4AAAABAAAAAAAZAA8AAAAAAAAAAAAZABAAAAAAAAAAAAAaAAAAAAACAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAACAAAAAAAaAAQAAAABAAAAAAAaAAUAAAAAAAAAAAAaAAYAAAACAAAAAAAaAAcAAAAAAAAAAAAaAAgAAAACAAAAAAAaAAkAAAACAAAAAAAaAAoAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAAwAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAAAAAAAAAAAaABAAAAAAAAAAAAAbAAAAAAACAAAAAAAbAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAABAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAACAAAAAAAbABAAAAAAAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAACAAAAAAAcAAIAAAABAAAAAAAcAAMAAAAAAAAAAAAcAAQAAAAAAAAAAAAcAAUAAAABAAAAAAAcAAYAAAAAAAAAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAAwAAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAABAAAAAAAcAA8AAAAAAAAAAAAcABAAAAAAAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAACAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAABAAAAAAAdAAYAAAACAAAAAAAdAAcAAAAAAAAAAAAdAAgAAAABAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAABAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAACAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAABAAAAAAAdABAAAAACAAAAAAAPAAkAAAAAAAAAAAAPAAsAAAACAAAAAAAQAAwAAAACAAAAAAAQAA0AAAABAAAAAAAQAA4AAAAAAAAAAAAQAA8AAAABAAAAAAAPAAoAAAACAAAAAAAPAA8AAAACAAAAAAAQAAsAAAACAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPABAAAAAAAAAAAAAQABAAAAAAAAAAAAAPAA4AAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAkAAAAAAAAAAAA=")
tile_set = ExtResource("1_fsom3")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAUAA4AAAAEAAAAAAAUAA8AAAAEAAEAAAALAA4AAAAEAAAAAAALAA8AAAAEAAEAAAAaAA0AAAAEAAAAAAAaAA4AAAAEAAEAAAAcAAkAAAAEAAAAAAAcAAoAAAAEAAEAAAAYAAQAAAAEAAAAAAAYAAUAAAAEAAEAAAAcAAMAAAAEAAAAAAAcAAQAAAAEAAEAAAADAAEAAAACAAgAAAADAAIAAAACAAkAAAABAAYAAQAJAAQAAAABAAcAAQAJAAQAAAAGAAoAAQAEAAMAAAAZAAAAAAAEAAAAAAAZAAEAAAAEAAEAAAAZAAoAAAAEAAAAAAAZAAsAAAAEAAEAAAAHAAQAAAABAAkAAAAHAAUAAAABAAkAAAAEAA4AAAAEAAAAAAAEAA8AAAAEAAEAAAAJAAMAAAABAAgAAAAJAAQAAAABAAkAAAAJAAUAAAABAAkAAAAJAAYAAAABAAoAAAAJAAcAAQAEAAMAAAAJAAgAAQAEAAMAAAAJAAkAAQAHAAEAAAAJAAoAAQAEAAMAAAAKAAMAAAABAAgAAAAKAAQAAAABAAkAAAAKAAUAAAABAAkAAAAKAAYAAAABAAoAAAAKAAcAAQAFAAIAAAAKAAgAAQAEAAMAAAAKAAkAAQAEAAMAAAAKAAoAAQAEAAMAAAALAAMAAAABAAgAAAALAAQAAAABAAkAAAALAAUAAAABAAkAAAALAAYAAAABAAoAAAALAAcAAQAEAAMAAAALAAgAAQAEAAMAAAALAAkAAQAEAAMAAAALAAoAAQAEAAMAAAAMAAMAAAAAAAoAAAAMAAQAAQAJAAQAAAAMAAUAAQAJAAQAAAAMAAYAAQAJAAQAAAAMAAcAAQAEAAMAAAAMAAgAAQAEAAMAAAAMAAkAAQAEAAMAAAAMAAoAAQAEAAMAAAANAAMAAAABAAoAAAANAAQAAQAFAAIAAAANAAUAAQAEAAMAAAANAAYAAQAEAAIAAAANAAcAAQAEAAMAAAANAAgAAQAEAAIAAAANAAkAAQAEAAMAAAANAAoAAQAEAAMAAAAOAAMAAAACAAoAAAAOAAQAAQALAAQAAAAOAAUAAQALAAQAAAAOAAYAAQALAAQAAAAOAAcAAQALAAQAAAAOAAgAAQALAAQAAAAOAAkAAQALAAQAAAAOAAoAAQALAAQAAAABAAEAAAAAAAgAAAABAAIAAAAAAAkAAAABAAMAAAAAAAoAAAABAAQAAQAJAAQAAAABAAUAAQAJAAQAAAABAAgAAQAJAAQAAAABAAkAAQAJAAQAAAABAAoAAQAJAAQAAAACAAEAAAABAAgAAAACAAIAAAABAAkAAAACAAMAAAABAAoAAAACAAQAAQAFAAIAAAACAAUAAQAEAAMAAAACAAYAAQAEAAIAAAACAAcAAQAEAAMAAAACAAgAAQAEAAIAAAACAAkAAQAEAAMAAAACAAoAAQAEAAMAAAADAAMAAAACAAoAAAADAAQAAQALAAQAAAADAAUAAQALAAQAAAADAAYAAQALAAQAAAADAAcAAQAEAAMAAAADAAgAAQAEAAMAAAADAAkAAQAEAAMAAAADAAoAAQAEAAMAAAAEAAMAAAABAAgAAAAEAAQAAAABAAkAAAAEAAUAAAABAAkAAAAEAAYAAAABAAoAAAAEAAcAAQAEAAMAAAAEAAgAAQAEAAMAAAAEAAkAAQAEAAMAAAAEAAoAAQAEAAMAAAAFAAMAAAABAAgAAAAFAAQAAAABAAkAAAAFAAUAAAABAAkAAAAFAAYAAAABAAoAAAAFAAcAAQAFAAIAAAAFAAgAAQAEAAMAAAAFAAkAAQAEAAMAAAAFAAoAAQAEAAMAAAAGAAMAAAABAAgAAAAGAAQAAAABAAkAAAAGAAUAAAABAAkAAAAGAAYAAAABAAoAAAAGAAcAAQAEAAMAAAAGAAgAAQAEAAMAAAAGAAkAAQAHAAEAAAAHAAMAAAABAAgAAAAHAAYAAAABAAoAAAAHAAcAAQAEAAMAAAAHAAgAAQAEAAMAAAAHAAkAAAADAAkAAAAHAAoAAAADAAoAAAAIAAMAAAABAAgAAAAIAAQAAAABAAkAAAAIAAUAAAABAAkAAAAIAAYAAAABAAoAAAAIAAcAAQAEAAMAAAAIAAgAAQAEAAMAAAAIAAkAAAAEAAkAAAAIAAoAAAAEAAoAAAAMAAEAAAAAAAgAAAAMAAIAAAAAAAkAAAANAAEAAAABAAgAAAANAAIAAAABAAkAAAAOAAEAAAACAAgAAAAOAAIAAAACAAkAAAAUAAUAAAAEAAAAAAAUAAYAAAAEAAEAAAAQAAEAAAAEAAAAAAAQAAIAAAAEAAEAAAAAAAwAAAAEAAAAAAAAAA0AAAAEAAEAAAABAA8AAAAEAAAAAAABABAAAAAEAAEAAAAWAAgAAAAEAAAAAAAWAAkAAAAEAAEAAAARAAwAAAAEAAAAAAARAA0AAAAEAAEAAAASAAcAAAAEAAAAAAASAAgAAAAEAAEAAAAVAAIAAAAEAAAAAAAVAAMAAAAEAAEAAAA=")
tile_set = ExtResource("1_fsom3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 314.0
offset_top = 131.0
offset_right = 414.0
offset_bottom = 217.0
theme_override_constants/separation = 24

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Options"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 33.0
offset_right = 447.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0.545098, 0.607843, 0.705882, 1)
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("5_wem23")
theme_override_font_sizes/font_size = 21
text = "Ambi
Dungeon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenu" parent="." instance=ExtResource("3_uqeha")]
unique_name_in_owner = true
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uqeha")
autoplay = true
bus = &"Music"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 280.0
offset_top = 29.0
offset_right = 444.0
offset_bottom = 93.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 248.0
offset_right = 476.0
offset_bottom = 271.0
text = "Developed by CakuDev"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
